<resources>
    <string name="app_name">WIvocabo</string>
    <string name="localdatabase">ivocabodb.db</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <!--start::parse db credetials-->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">6OeFz5FXnW7YSzpgybpMHW7AZjcy8ae23hFuhvI8</string>
    <string name="back4app_client_key">76ve3Hc2utzbskckgdIjGBb4egC4vP0KvsnYrfQb</string>
    <!--end::parse db credetials-->
    <!--start::registration form details-->
    <string name="rgfrm_title">Registration Form</string>
    <string name="rgfrm_subtitle">Please fill below form, cause we only communicate with your given data.</string>
    <string name="rgfrm_warning">We undertake that the data you register with this form will not be shared with third parties and will be protected.</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>

    <string name="formelementisempty">Please don not leave empty!</string>
    <!--end::registration form details-->
    <!--start::parse db class names-->
    <string name="pclass_beacons">Beacons</string>
    <string name="pclass_missingarchive">MissingArchive</string>
    <string name="pclass_missingbeacons">MissingBeacons</string>
    <string name="pclass_trackarchive">TrackArchive</string>
    <!--end::parse db class names-->
    <!--start::login form-->
    <string name="signin_title">Sign-in Form</string>
    <string name="signin_button">Sign-in</string>
    <string name="signin_forgetpassword_button">I forget my password.</string>
    <!--end::login form-->
    <!--start::dashboard add device-->
    <string name="dmn_adddevice">Add Device</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dfrm_title">Add New Device</string>
    <string name="macaddress">Mac Address</string>
    <string name="dfrm_devicename">Device Name</string>

    <string description="a transient text that appears on screen when a card is dismissed [CHAR LIMIT=30]"
        name="cat_card_dismissed">Card Dismissed</string>
    <string description="A label in a button to dismiss the last action [CHAR LIMIT=15]"
        name="cat_card_undo">Undo</string>
    <string description="A label in a button to dismiss the last action [CHAR LIMIT=30]"
        name="cat_card_swipe_to_dismiss">Swipe this card to dismiss it</string>
    <!--start::dashboard add device-->
</resources>