<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Login">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher" />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:layout_marginBottom="10dp"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:text="@string/signin_title"
        ></com.google.android.material.textview.MaterialTextView>
    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/txtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/txtpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="20"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:id="@+id/buttonarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/btnforgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_forgetpassword_button"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            >
            <Button
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:id="@+id/btncancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/btnforgetpassword"
                android:layout_marginRight="5dp"
                android:text="@string/cancel"
                />
            <Button
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:id="@+id/btnsubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/signin_button"
                />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>